test/compilable/checkimports1a.d
// REQUIRED_ARGS:

class C
{
    void f()
    {
        import imports.diag12598a;
        lines ~= "";
    }

    string[] lines;
}
