test/fail_compilation/fail75.d
class C{
     C[1] c;
     this(){
         c ~= this;
     }
}
